# mmCIF

./: meson.build  stream2mmCIF.c
